SILGen: Emit local types with a separate pass instead of while walking statements

Otherwise we might miss emitting a local type that's inside
unreachable code. Normally such a type cannot be found via
name lookup either, but IRGen will walk the list of local types
and try to emit a class with no SIL vtable, which will crash.

Fixes <https://bugs.swift.org/browse/SR-1924>.